--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ footer, .header, .section-segment {
 
 main.container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -202,9 +202,14 @@ section ul {
 }
 
 @media (max-width: 1250px) { /* if screen gets too small, make sure elements still look good*/
-    footer, .header, .container {
-        min-width: 400px;
+    footer, .header, .container, .form-container {
+        min-width: 55%;
         padding-left: 0;
         padding-right: 0;
+        margin: 15%;
+    }
+    .form-container {
+        margin: auto;
+        display: block;
     }
 }
